# OOP_lr3

./: CMakeCache.txt  CMakeLists.txt  Makefile  figure.cpp  figure.h  figure_array.cpp  figure_array.h  main.cpp  octagon.cpp  octagon.h  square.cpp  square.h  tests.cpp  triangle.cpp  triangle.h
